--- a/src/main/resources/AjouterCommande.fxml
+++ b/src/main/resources/AjouterCommande.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterProduitController">
    <children>
@@ -14,5 +14,6 @@
       <TextField fx:id="prixTF" layoutX="336.0" layoutY="72.0" />
       <TextField fx:id="totalTF" layoutX="336.0" layoutY="112.0" />
       <TextField fx:id="statutTF" layoutX="336.0" layoutY="148.0" />
+      <Button fx:id="ajoutercommande" layoutX="240.0" layoutY="215.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
