--- a/src/main/resources/AfficherCategorie.fxml
+++ b/src/main/resources/AfficherCategorie.fxml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherCategorieController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #f0f0f0, #e0c3fc); -fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterProduitController">
    <children>
-      <TextField fx:id="rcategorie" layoutX="150.0" layoutY="97.0" />
-      <Label layoutX="84.0" layoutY="101.0" text="Categorie" />
-      <TextField fx:id="rlist" layoutX="20.0" layoutY="236.0" prefHeight="72.0" prefWidth="548.0" />
+      <Text layoutX="200.0" layoutY="30.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Ajouter un produit" />
+      <Label layoutX="100.0" layoutY="65.0" style="-fx-text-fill: #8e44ad;" text="Nom :" />
+      <TextField fx:id="nomTF" layoutX="217.0" layoutY="60.0" promptText="Nom " />
+      <Label layoutX="100.0" layoutY="105.0" style="-fx-text-fill: #8e44ad;" text="Description :" />
+      <TextField fx:id="descriptionTF" layoutX="217.0" layoutY="100.0" promptText="Description" />
+      <Label layoutX="100.0" layoutY="145.0" style="-fx-text-fill: #8e44ad;" text="Ref :" />
+      <TextField fx:id="refTF" layoutX="217.0" layoutY="140.0" promptText="Ref" />
+      <Label layoutX="100.0" layoutY="185.0" style="-fx-text-fill: #8e44ad;" text="Photo :" />
+      <TextField fx:id="photoTF" layoutX="217.0" layoutY="180.0" promptText="Lien de la photo" />
+      <Label layoutX="100.0" layoutY="225.0" style="-fx-text-fill: #8e44ad;" text="Prix:" />
+      <TextField fx:id="prixTF" layoutX="217.0" layoutY="220.0" promptText="Prix" />
+      <Label layoutX="100.0" layoutY="265.0" style="-fx-text-fill: #8e44ad;" text="Quantité :" />
+      <TextField fx:id="quantiteTF" layoutX="217.0" layoutY="260.0" promptText="Quantité" />
+      <Label layoutX="100.0" layoutY="305.0" style="-fx-text-fill: #8e44ad;" text="Catégorie :" />
+      <ComboBox fx:id="categorieComboBox" layoutX="217.0" layoutY="300.0" prefWidth="150.0" promptText="Catégorie" style="-fx-background-color: white;  " />
+
+      <Button layoutX="344.0" layoutY="390.0" mnemonicParsing="false" onAction="#ajouterproduit" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Ajouter" />
+      <Button layoutX="152.0" layoutY="390.0" mnemonicParsing="false" onAction="#annulerproduit" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Annuler" />
+
+      <!-- ListView pour afficher les produits -->
+      <ListView fx:id="produitListView" layoutX="100.0" layoutY="450.0" prefWidth="400.0" prefHeight="120.0" style="-fx-background-color: white; -fx-border-color: #8e44ad; -fx-border-radius: 5;" />
    </children>
 </AnchorPane>
