--- a/src/main/resources/AfficherProduit.fxml
+++ b/src/main/resources/AfficherProduit.fxml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherProduitController">
+<AnchorPane prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #f0f0f0, #e0c3fc); -fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherProduitController">
    <children>
-      <TextField fx:id="rnom" layoutX="196.0" layoutY="38.0" />
-      <TextField fx:id="rdescription" layoutX="196.0" layoutY="82.0" />
-      <TextField fx:id="rref" layoutX="197.0" layoutY="124.0" />
-      <TextField fx:id="rphoto" layoutX="197.0" layoutY="167.0" />
-      <TextField fx:id="rprix" layoutX="198.0" layoutY="212.0" />
-      <TextField fx:id="rquantite" layoutX="199.0" layoutY="253.0" />
-      <TextField fx:id="rcategorie" layoutX="197.0" layoutY="294.0" />
-      <TextField fx:id="rlist" layoutX="8.0" layoutY="336.0" prefHeight="58.0" prefWidth="571.0" />
-      <Label layoutX="108.0" layoutY="42.0" text="Nom " />
-      <Label layoutX="108.0" layoutY="86.0" text="Description" />
-      <Label layoutX="108.0" layoutY="128.0" text="Ref" />
-      <Label layoutX="108.0" layoutY="171.0" text="Photo" />
-      <Label layoutX="108.0" layoutY="216.0" text="Prix" />
-      <Label layoutX="108.0" layoutY="257.0" text="Quantite" />
-      <Label layoutX="108.0" layoutY="298.0" text="categorie" />
+
+
+
+
+      <Text layoutX="142.0" layoutY="36.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Detail Produit" />
+      <ImageView fx:id="imageView" fitHeight="120.0" fitWidth="700.0" layoutX="230.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="234.0" layoutY="183.0" style="-fx-text-fill: #8e44ad;" text="Nom :" />
+      <Text fx:id="rnom" layoutX="351.0" layoutY="196.0" wrappingWidth="202.39997558593745" />
+      <Label layoutX="234.0" layoutY="227.0" style="-fx-text-fill: #8e44ad;" text="Description :" />
+      <Text fx:id="rdescription" layoutX="351.0" layoutY="240.0" wrappingWidth="52.0" />
+      <Label layoutX="234.0" layoutY="269.0" style="-fx-text-fill: #8e44ad;" text="Ref :" />
+      <Text fx:id="rref" layoutX="351.0" layoutY="282.0" wrappingWidth="194.39996337890625" />
+
+      <Label layoutX="234.0" layoutY="312.0" style="-fx-text-fill: #8e44ad;" text="Prix:" />
+      <Text fx:id="rprix" layoutX="351.0" layoutY="325.0" wrappingWidth="194.39996337890625" />
+      <Label layoutX="234.0" layoutY="352.0" style="-fx-text-fill: #8e44ad;" text="Quantite :" />
+      <Text fx:id="rquantite" layoutX="351.0" layoutY="365.0" wrappingWidth="262.4000549316406" />
+
+
+      <Label layoutX="234.0" layoutY="392.0" style="-fx-text-fill: #8e44ad;" text="Catégorie :" />
+
+      <Text fx:id="categorieComboBox" layoutX="351.0" layoutY="405.0" style="-fx-background-color: white;  " wrappingWidth="286.4000549316406" />
+         <!-- Les éléments de la liste déroulante seront ajoutés via le contrôleur Java -->
+
+
+
    </children>
+   <!-- Bouton Modifier -->
+
+
 </AnchorPane>
