--- a/src/main/resources/AjouterCategorie.fxml
+++ b/src/main/resources/AjouterCategorie.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterCategorieController">
+<AnchorPane prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #f0f0f0, #e0c3fc); -fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterCategorieController">
    <children>
-      <Button layoutX="440.0" layoutY="328.0" mnemonicParsing="false" onAction="#ajoutercategorie" text="Button" />
-      <TextField fx:id="categorieTF" layoutX="92.0" layoutY="149.0" />
+      <Text layoutX="195.0" layoutY="85.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Ajouter un catégorie" />
+      <Label layoutX="100.0" layoutY="177.0" style="-fx-text-fill: #8e44ad;" text="Nom :" />
+      <TextField fx:id="categorieTF" layoutX="217.0" layoutY="172.0" promptText="Categorie " />
+      <Button layoutX="329.0" layoutY="274.0" mnemonicParsing="false" onAction="#ajoutercategorie" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Ajouter" />
+      <Button layoutX="161.0" layoutY="274.0" mnemonicParsing="false" onAction="#annulercategorie" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Annuler" />
+
+
    </children>
 </AnchorPane>
