--- a/src/main/resources/AjouterCommande.fxml
+++ b/src/main/resources/AjouterCommande.fxml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterProduitController">
+<AnchorPane prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #f0f0f0, #e0c3fc); -fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterCommandeController">
    <children>
-      <TextField fx:id="nombreTF" layoutX="36.0" layoutY="31.0" promptText="nombre" />
-      <TextField fx:id="localisationTF" layoutX="37.0" layoutY="72.0" />
-      <TextField fx:id="telephoneTF" layoutX="38.0" layoutY="112.0" />
-      <TextField fx:id="mailTF" layoutX="36.0" layoutY="148.0" />
-      <TextField fx:id="dateTF" layoutX="335.0" layoutY="31.0" />
-      <TextField fx:id="prixTF" layoutX="336.0" layoutY="72.0" />
-      <TextField fx:id="totalTF" layoutX="336.0" layoutY="112.0" />
-      <TextField fx:id="statutTF" layoutX="336.0" layoutY="148.0" />
-      <Button fx:id="ajoutercommande" layoutX="240.0" layoutY="215.0" mnemonicParsing="false" text="Button" />
+      <Text layoutX="200.0" layoutY="30.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Passer une commande" />
+      <Label layoutX="100.0" layoutY="65.0" style="-fx-text-fill: #8e44ad;" text="Nombre :" />
+      <TextField fx:id="nombreTF" layoutX="217.0" layoutY="60.0" promptText="Nombre " />
+      <Label layoutX="100.0" layoutY="105.0" style="-fx-text-fill: #8e44ad;" text="Localisation :" />
+      <TextField fx:id="localisationTF" layoutX="217.0" layoutY="100.0" promptText="Localisation" />
+      <Label layoutX="104.0" layoutY="185.0" style="-fx-text-fill: #8e44ad;" text="mail :" />
+      <TextField fx:id="mailTF" layoutX="217.0" layoutY="140.0" promptText="Mail" />
+      <Label layoutX="103.0" layoutY="144.0" style="-fx-text-fill: #8e44ad;" text="Date :" />
+      <TextField fx:id="dateTF" layoutX="217.0" layoutY="180.0" promptText="Date" />
+      <Label layoutX="100.0" layoutY="225.0" style="-fx-text-fill: #8e44ad;" text="Prix:" />
+      <TextField fx:id="prixTF" layoutX="217.0" layoutY="220.0" promptText="Prix" />
+      <Label layoutX="100.0" layoutY="265.0" style="-fx-text-fill: #8e44ad;" text="Total :" />
+      <TextField fx:id="totalTF" layoutX="217.0" layoutY="260.0" promptText="Quantite" />
+      <Label layoutX="100.0" layoutY="305.0" style="-fx-text-fill: #8e44ad;" text="Statut :" />
+      <!-- On laisse ce champ mais il sera rempli par défaut en "en attente" -->
+      <TextField fx:id="statutTF" layoutX="217.0" layoutY="300.0" promptText="Statut" editable="false" text="en attente" />
+
+      <Button layoutX="250.0" layoutY="390.0" mnemonicParsing="false" onAction="#annulerCommande" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Annuler" />
+      <Button layoutX="344.0" layoutY="390.0" mnemonicParsing="false" onAction="#ajouterCommande" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-size: 14; -fx-background-radius: 5;" text="Passer" />
    </children>
 </AnchorPane>
