--- a/src/main/resources/AfficherProduit.fxml
+++ b/src/main/resources/AfficherProduit.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
@@ -9,29 +11,33 @@
    <children>
 
 
+      <Text layoutX="313.0" layoutY="42.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Detail Produit" />
+      <ImageView fx:id="imageView" fitHeight="311.0" fitWidth="326.0" layoutX="14.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="379.0" layoutY="86.0" style="-fx-text-fill: #8e44ad;" text="Nom :" />
+      <Text fx:id="rnom" layoutX="496.0" layoutY="99.0" wrappingWidth="202.39997558593745" />
+      <Label layoutX="379.0" layoutY="130.0" style="-fx-text-fill: #8e44ad;" text="Description :" />
+      <Text fx:id="rdescription" layoutX="496.0" layoutY="143.0" wrappingWidth="52.0" />
+      <Label layoutX="379.0" layoutY="172.0" style="-fx-text-fill: #8e44ad;" text="Ref :" />
+      <Text fx:id="rref" layoutX="496.0" layoutY="185.0" wrappingWidth="194.39996337890625" />
+
+      <Label layoutX="379.0" layoutY="215.0" style="-fx-text-fill: #8e44ad;" text="Prix:" />
+      <Text fx:id="rprix" layoutX="496.0" layoutY="228.0" wrappingWidth="194.39996337890625" />
+      <Label layoutX="379.0" layoutY="255.0" style="-fx-text-fill: #8e44ad;" text="Quantite :" />
+      <Text fx:id="rquantite" layoutX="496.0" layoutY="268.0" wrappingWidth="262.4000549316406" />
 
 
-      <Text layoutX="142.0" layoutY="36.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-fill: #8e44ad;" text="Detail Produit" />
-      <ImageView fx:id="imageView" fitHeight="120.0" fitWidth="700.0" layoutX="230.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="234.0" layoutY="183.0" style="-fx-text-fill: #8e44ad;" text="Nom :" />
-      <Text fx:id="rnom" layoutX="351.0" layoutY="196.0" wrappingWidth="202.39997558593745" />
-      <Label layoutX="234.0" layoutY="227.0" style="-fx-text-fill: #8e44ad;" text="Description :" />
-      <Text fx:id="rdescription" layoutX="351.0" layoutY="240.0" wrappingWidth="52.0" />
-      <Label layoutX="234.0" layoutY="269.0" style="-fx-text-fill: #8e44ad;" text="Ref :" />
-      <Text fx:id="rref" layoutX="351.0" layoutY="282.0" wrappingWidth="194.39996337890625" />
+      <Label layoutX="379.0" layoutY="295.0" style="-fx-text-fill: #8e44ad;" text="Catégorie :" />
 
-      <Label layoutX="234.0" layoutY="312.0" style="-fx-text-fill: #8e44ad;" text="Prix:" />
-      <Text fx:id="rprix" layoutX="351.0" layoutY="325.0" wrappingWidth="194.39996337890625" />
-      <Label layoutX="234.0" layoutY="352.0" style="-fx-text-fill: #8e44ad;" text="Quantite :" />
-      <Text fx:id="rquantite" layoutX="351.0" layoutY="365.0" wrappingWidth="262.4000549316406" />
-
-
-      <Label layoutX="234.0" layoutY="392.0" style="-fx-text-fill: #8e44ad;" text="Catégorie :" />
-
-      <Text fx:id="categorieComboBox" layoutX="351.0" layoutY="405.0" style="-fx-background-color: white;  " wrappingWidth="286.4000549316406" />
+      <Text fx:id="categorieComboBox" layoutX="496.0" layoutY="308.0" style="-fx-background-color: white;  " wrappingWidth="286.4000549316406" />
          <!-- Les éléments de la liste déroulante seront ajoutés via le contrôleur Java -->
 
-
+      <!-- Bouton Passer une commande -->
+      <Button fx:id="btnCommander" layoutX="429.0" layoutY="354.0" onAction="#passerCommande" prefHeight="42.0" prefWidth="217.0" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-padding: 10; -fx-font-size: 14; -fx-font-weight: bold;" text="Passer une commande" />
+      <ImageView fitHeight="12.0" fitWidth="33.0" layoutX="607.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/OIP__13_-removebg-preview.png" />
+         </image>
+      </ImageView>
 
    </children>
    <!-- Bouton Modifier -->
